--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
     "command_prompt": "prompts/command.txt",
-    "display_prompt": "prompts/display.txt"
+    "display_prompt": "prompts/display.txt",
+    "model": "OpenAI"
 }
