--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,7 @@
 {
     "command_prompt": "prompts/command.txt",
     "display_prompt": "prompts/display.txt",
+    "user_command_prompt": "prompts/user_command.txt",
+    
     "model": "OpenAI"
 }
